--- a/src/app/views/admin/end-process/end-process.component.scss
+++ b/src/app/views/admin/end-process/end-process.component.scss
@@ -70,3 +70,14 @@
   align-items: center;
   height: 100%;
 }
+
+
+button:disabled {
+  opacity: 0.5; /* Reduce la opacidad del botón deshabilitado */
+  cursor: not-allowed; /* Cambia el cursor cuando pasa sobre un botón deshabilitado */
+}
+
+button.disabled {
+  opacity: 0.5; /* Aplica la misma opacidad a los botones que tienen la clase .disabled */
+  cursor: not-allowed; /* Cambia el cursor cuando pasa sobre un botón con la clase .disabled */
+}
