--- a/src/app/views/admin/end-process/end-process.component.html
+++ b/src/app/views/admin/end-process/end-process.component.html
@@ -57,19 +57,18 @@
             severity="warning"
             value="Pendiente"
           ></p-tag>
-          <!-- <p-tag
+          <button
+            class="btn_success"
             *ngIf="rowData.estadoDocumento === 'Aprobado'"
-            icon="pi pi-file-check"
-            severity="warning"
-            value="Pendiente"
-          ></p-tag> -->
-          <!-- <button
-            class="btn_search"
             type="button"
             (click)="verComprobante(rowData)"
           >
-            <i class="pi pi-search" style="font-size: 1rem"></i>
-          </button> -->
+            <p-tag
+              icon="pi pi-file-check"
+              severity="success"
+              value="Revisar"
+            ></p-tag>
+          </button>
         </td>
         <td style="text-align: center">
           <p-tag
@@ -141,11 +140,18 @@
   [draggable]="false"
 >
   <div class="dialog-content-center">
-    <p-image
-      src="https://getquipu.com/wp-content/uploads/2021/10/02155904/plantilla-de-excel-recibo-de-pago-1.png"
-      alt="Image"
-      width="250"
-      [preview]="true"
-    />
+    <ng-container *ngIf="selectedDocument">
+      <ng-container *ngIf="selectedDocument.typeDocument.startsWith('image/'); else pdfTemplate">
+        <p-image
+          [src]="selectedDocumentUrl"
+          alt="Image"
+          width="250"
+          [preview]="true"
+        />
+      </ng-container>
+      <ng-template #pdfTemplate>
+        <iframe [src]="selectedDocumentUrl" width="100%" height="600px"></iframe>
+      </ng-template>
+    </ng-container>
   </div>
 </p-dialog>
