--- a/src/app/views/admin/login/login.component.html
+++ b/src/app/views/admin/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <p class="sign" align="center">Iniciar Sesion</p>
+  <p class="sign" align="center">Iniciar Sesión</p>
   <form class="form1" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <input
       class="un"
@@ -22,7 +22,6 @@
       id="password"
       formControlName="password"
     />
-
     <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)">
       <small class="error-message" *ngIf="loginForm.get('password')?.errors?.['required']">
         La contraseña es requerida.
@@ -31,4 +30,3 @@
     <button class="submit" type="submit" align="center">Ingresar</button>
   </form>
 </div>
-
