--- a/src/app/views/user/registration-form/registration-form.component.html
+++ b/src/app/views/user/registration-form/registration-form.component.html
@@ -210,7 +210,7 @@
         <div class="row">
           <div class="col-md-6 offset-md-3">
             <!-- recaptcha con la clave del sitio-->
-            <!-- <div class="mb-3">
+            <div class="mb-3">
               <div class="d-flex justify-content-center">
                 <re-captcha
                   (resolved)="resolved($event)"
@@ -220,7 +220,7 @@
               <div *ngIf="!captchaValid && form.get('captcha')?.touched" class="text-danger">
                 <small>Completa el reCAPTCHA</small>
               </div>
-            </div> -->
+            </div>
 
             <!-- <button
               class="btn btn-primary w-100"
