--- a/src/app/views/admin/verify-data/verify-data.component.scss
+++ b/src/app/views/admin/verify-data/verify-data.component.scss
@@ -80,15 +80,17 @@
 
 
 td, th {
-  padding: 1rem; // Esto agrega un poco de espacio alrededor del contenido de cada celda
+  padding: 1rem; 
 }
 
 button:disabled {
-  opacity: 0.5; /* Reduce la opacidad del botón deshabilitado */
-  cursor: not-allowed; /* Cambia el cursor cuando pasa sobre un botón deshabilitado */
+  opacity: 0.5; 
+  cursor: not-allowed; 
 }
 
 button.disabled {
-  opacity: 0.5; /* Aplica la misma opacidad a los botones que tienen la clase .disabled */
-  cursor: not-allowed; /* Cambia el cursor cuando pasa sobre un botón con la clase .disabled */
+  opacity: 0.5; 
+  cursor: not-allowed; 
 }
+
+
