--- a/src/app/views/user/registration-form/registration-form.component.html
+++ b/src/app/views/user/registration-form/registration-form.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <app-card-image></app-card-image>
-<div class="container d-flex justify-content-center align-items-center min-vh-100 mt-5">
+<div
+  class="container d-flex justify-content-center align-items-center min-vh-100 mt-5"
+>
   <div class="col-md-8">
     <form (ngSubmit)="save($event)" [formGroup]="form" class="formulario">
       <div class="formulario__text">
@@ -26,8 +28,16 @@
               pattern="[0-9]*"
               inputmode="numeric"
             />
-            <small *ngIf="getError('identification', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('identification', 'cedulaInvalida')" class="text-danger">Cédula inválida</small>
+            <small
+              *ngIf="getError('identification', 'required')"
+              class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small
+              *ngIf="getError('identification', 'cedulaInvalida')"
+              class="text-danger"
+              >Cédula inválida</small
+            >
           </div>
 
           <!-- Número de Celular -->
@@ -46,8 +56,14 @@
               }"
               pattern="[0-9]*"
             />
-            <small *ngIf="getError('phone', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('phone', 'telefonoInvalido')" class="text-danger">Número de celular inválido</small>
+            <small *ngIf="getError('phone', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small
+              *ngIf="getError('phone', 'telefonoInvalido')"
+              class="text-danger"
+              >Número de celular inválido</small
+            >
           </div>
         </div>
 
@@ -65,8 +81,14 @@
                 'is-valid': isValid('email')
               }"
             />
-            <small *ngIf="getError('email', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('email', 'correoInvalido')" class="text-danger">Correo electrónico inválido</small>
+            <small *ngIf="getError('email', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small
+              *ngIf="getError('email', 'correoInvalido')"
+              class="text-danger"
+              >Correo electrónico inválido</small
+            >
           </div>
 
           <!-- Nombre Completo -->
@@ -85,17 +107,29 @@
                 'is-valid': isValid('name')
               }"
             />
-            <small *ngIf="getError('name', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('name', 'minlength')" class="text-danger">El nombre debe tener al menos 3 caracteres</small>
-            <small *ngIf="getError('name', 'maxlength')" class="text-danger">El nombre no puede exceder los 100 caracteres</small>
-            <small *ngIf="getError('name', 'nombreInvalido')" class="text-danger">Nombre inválido</small>
+            <small *ngIf="getError('name', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small *ngIf="getError('name', 'minlength')" class="text-danger"
+              >El nombre debe tener al menos 3 caracteres</small
+            >
+            <small *ngIf="getError('name', 'maxlength')" class="text-danger"
+              >El nombre no puede exceder los 100 caracteres</small
+            >
+            <small
+              *ngIf="getError('name', 'nombreInvalido')"
+              class="text-danger"
+              >Nombre inválido</small
+            >
           </div>
         </div>
 
         <div class="row">
           <!-- Fecha de Nacimiento -->
           <div class="col-md-6 form-group position-relative mb-3">
-            <label>Fecha de Nacimiento<span class="text-danger">*</span>:</label>
+            <label
+              >Fecha de Nacimiento<span class="text-danger">*</span>:</label
+            >
             <input
               type="date"
               class="form-control custom-date-input"
@@ -106,8 +140,14 @@
                 'is-valid': isValid('birthdate')
               }"
             />
-            <small *ngIf="getError('birthdate', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('birthdate', 'edadInvalida')" class="text-danger">Debe tener al menos 18 años y menos de 50</small>
+            <small *ngIf="getError('birthdate', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small
+              *ngIf="getError('birthdate', 'edadInvalida')"
+              class="text-danger"
+              >Debe tener al menos 18 años y menos de 50</small
+            >
           </div>
 
           <!-- Provincia -->
@@ -123,9 +163,18 @@
               }"
             >
               <option value="">Seleccione una provincia</option>
-              <option *ngFor="let provincia of provinces" [value]="provincia._id">{{ provincia.nombre }}</option>
+              <option
+                *ngFor="let provincia of provinces"
+                [value]="provincia._id"
+              >
+                {{ provincia.nombre }}
+              </option>
             </select>
-            <small *ngIf="getError('id_province', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small
+              *ngIf="getError('id_province', 'required')"
+              class="text-danger"
+              >El campo es obligatorio</small
+            >
           </div>
         </div>
 
@@ -143,9 +192,15 @@
                 'is-valid': isValid('address')
               }"
             />
-            <small *ngIf="getError('address', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('address', 'minlength')" class="text-danger">La dirección debe tener al menos 10 caracteres</small>
-            <small *ngIf="getError('address', 'maxlength')" class="text-danger">La dirección no puede exceder los 100 caracteres</small>
+            <small *ngIf="getError('address', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small *ngIf="getError('address', 'minlength')" class="text-danger"
+              >La dirección debe tener al menos 10 caracteres</small
+            >
+            <small *ngIf="getError('address', 'maxlength')" class="text-danger"
+              >La dirección no puede exceder los 100 caracteres</small
+            >
           </div>
 
           <!-- Género -->
@@ -161,9 +216,13 @@
               }"
             >
               <option value="">Seleccione un género</option>
-              <option *ngFor="let gender of genders" [value]="gender._id">{{ gender.name }}</option>
+              <option *ngFor="let gender of genders" [value]="gender._id">
+                {{ gender.name }}
+              </option>
             </select>
-            <small *ngIf="getError('id_gender', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small *ngIf="getError('id_gender', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
           </div>
         </div>
 
@@ -181,14 +240,26 @@
               }"
             >
               <option value="">Seleccione un comando</option>
-              <option *ngFor="let commandType of commandTypes" [value]="commandType._id">{{ commandType.name }}</option>
+              <option
+                *ngFor="let commandType of commandTypes"
+                [value]="commandType._id"
+              >
+                {{ commandType.name }}
+              </option>
             </select>
-            <small *ngIf="getError('id_commandType', 'required')" class="text-danger">El campo es obligatorio</small>
+            <small
+              *ngIf="getError('id_commandType', 'required')"
+              class="text-danger"
+              >El campo es obligatorio</small
+            >
           </div>
 
           <!-- Nota de Grado sobre 20 Pts -->
           <div class="col-md-6 form-group position-relative mb-3">
-            <label>Nota de Grado sobre 20 Puntos<span class="text-danger">*</span>:</label>
+            <label
+              >Nota de Grado sobre 20 Puntos<span class="text-danger">*</span
+              >:</label
+            >
             <input
               type="number"
               class="form-control"
@@ -201,9 +272,15 @@
               min="0"
               max="20"
             />
-            <small *ngIf="getError('gradeNote', 'required')" class="text-danger">El campo es obligatorio</small>
-            <small *ngIf="getError('gradeNote', 'min')" class="text-danger">La nota debe ser mayor o igual a 0</small>
-            <small *ngIf="getError('gradeNote', 'max')" class="text-danger">La nota no puede exceder los 20 puntos</small>
+            <small *ngIf="getError('gradeNote', 'required')" class="text-danger"
+              >El campo es obligatorio</small
+            >
+            <small *ngIf="getError('gradeNote', 'min')" class="text-danger"
+              >La nota debe ser mayor o igual a 0</small
+            >
+            <small *ngIf="getError('gradeNote', 'max')" class="text-danger"
+              >La nota no puede exceder los 20 puntos</small
+            >
           </div>
         </div>
 
@@ -217,7 +294,10 @@
                   siteKey="6LcCnvYpAAAAANhQwPdVNrZkKoHrdoUeURM5khPJ"
                 ></re-captcha>
               </div>
-              <div *ngIf="!captchaValid && form.get('captcha')?.touched" class="text-danger">
+              <div
+                *ngIf="!captchaValid && form.get('captcha')?.touched"
+                class="text-danger"
+              >
                 <small>Completa el reCAPTCHA</small>
               </div>
             </div>
@@ -229,13 +309,6 @@
             >
               ENVIAR
             </button>
-            <button
-            class="btn btn-primary w-100"
-            [disabled]="form.invalid"
-            type="submit"
-          >
-            ENVIAR
-          </button>
           </div>
         </div>
       </div>
