--- a/src/app/views/admin/end-process/end-process.component.html
+++ b/src/app/views/admin/end-process/end-process.component.html
@@ -1,4 +1,9 @@
 <div class="card">
+  <div class="table-header">
+    <button class="btn_success" (click)="updateTable()">
+      <p-tag icon="pi pi-refresh" severity="secondary" value="Refrescar" />
+    </button>
+  </div>
   <p-table
     #dt
     [value]="filteredData"
@@ -68,6 +73,13 @@
               severity="success"
               value="Revisar"
             ></p-tag>
+          </button>
+          <button
+            *ngIf="rowData.estadoVerificacion === 'Pendiente'"
+            class="btn_success"
+            (click)="reenviarEnlaceAlert(rowData)"
+          >
+            <p-tag icon="pi pi-file-arrow-up" severity="info" />
           </button>
         </td>
         <td style="text-align: center">
@@ -141,7 +153,12 @@
 >
   <div class="dialog-content-center">
     <ng-container *ngIf="selectedDocument">
-      <ng-container *ngIf="selectedDocument.typeDocument.startsWith('image/'); else pdfTemplate">
+      <ng-container
+        *ngIf="
+          selectedDocument.typeDocument.startsWith('image/');
+          else pdfTemplate
+        "
+      >
         <p-image
           [src]="selectedDocumentUrl"
           alt="Image"
@@ -150,7 +167,11 @@
         />
       </ng-container>
       <ng-template #pdfTemplate>
-        <iframe [src]="selectedDocumentUrl" width="100%" height="600px"></iframe>
+        <iframe
+          [src]="selectedDocumentUrl"
+          width="100%"
+          height="600px"
+        ></iframe>
       </ng-template>
     </ng-container>
   </div>
