--- a/src/app/views/admin/end-process/end-process.component.scss
+++ b/src/app/views/admin/end-process/end-process.component.scss
@@ -73,11 +73,20 @@
 
 
 button:disabled {
-  opacity: 0.5; /* Reduce la opacidad del botón deshabilitado */
-  cursor: not-allowed; /* Cambia el cursor cuando pasa sobre un botón deshabilitado */
+  opacity: 0.5; 
+  cursor: not-allowed; 
 }
 
 button.disabled {
-  opacity: 0.5; /* Aplica la misma opacidad a los botones que tienen la clase .disabled */
-  cursor: not-allowed; /* Cambia el cursor cuando pasa sobre un botón con la clase .disabled */
+  opacity: 0.5; 
+  cursor: not-allowed; 
 }
+
+
+.table-header {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.3rem; 
+}
+
+
