--- a/src/app/views/admin/verify-data/verify-data.component.html
+++ b/src/app/views/admin/verify-data/verify-data.component.html
@@ -24,23 +24,23 @@
 
     <ng-template pTemplate="header">
       <tr style="text-align: center">
-        <th pSortableColumn="cedula">
+        <th pSortableColumn="cedula" scope="col">
           Cédula <p-sortIcon field="cedula"></p-sortIcon>
         </th>
-        <th pSortableColumn="nombresCompletos">
+        <th pSortableColumn="nombresCompletos" scope="col">
           Nombre Completo <p-sortIcon field="nombresCompletos"></p-sortIcon>
         </th>
-        <th pSortableColumn="genero">
+        <th pSortableColumn="genero" scope="col">
           Género <p-sortIcon field="genero"></p-sortIcon>
         </th>
-        <th pSortableColumn="provincia">
+        <th pSortableColumn="provincia" scope="col">
           Provincia <p-sortIcon field="provincia"></p-sortIcon>
         </th>
-        <th pSortableColumn="tipoCurso">
+        <th pSortableColumn="tipoCurso" scope="col">
           Tipo de Curso <p-sortIcon field="tipoCurso"></p-sortIcon>
         </th>
-        <th>Estado</th>
-        <th>Acciones</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
       </tr>
     </ng-template>
 
