--- a/src/app/views/user/upload-receipt/upload-receipt.component.html
+++ b/src/app/views/user/upload-receipt/upload-receipt.component.html
@@ -20,7 +20,7 @@
         <ng-container *ngIf="isImage; else pdfTemplate">
           <img
             [src]="fileUrl"
-            alt="Vista previa de la imagen"
+            alt="Vista previa"
             class="preview-image"
           />
         </ng-container>
