--- a/src/app/views/admin/login/login.component.scss
+++ b/src/app/views/admin/login/login.component.scss
@@ -42,7 +42,9 @@
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
+  border-width: 2px;
+  border-color: rgba(0, 0, 0, 0.02);
+  border-style: solid;
   margin-bottom: 15px; 
   margin-left: auto; 
   margin-right: auto;
@@ -79,7 +81,9 @@ form.form1 {
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
+  border-width: 2px;
+  border-color: rgba(0, 0, 0, 0.02);
+  border-style: solid;
   margin-bottom: 15px; 
   margin-left: auto; 
   margin-right: auto;
