--- a/src/app/views/admin/verify-data/verify-data.component.html
+++ b/src/app/views/admin/verify-data/verify-data.component.html
@@ -1,27 +1,15 @@
 <div class="card">
-  <p-table
-    #dt
-    [value]="filteredData"
-    [paginator]="true"
-    [rows]="5"
-    [tableStyle]="{ 'min-width': '50rem' }"
-  >
+  <p-table #dt [value]="filteredData" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="caption">
       <div class="flex">
         <div class="p-inputgroup ml-auto">
           <span class="p-inputgroup-addon">
             <i class="pi pi-search"></i>
           </span>
-          <input
-            pInputText
-            type="text"
-            (input)="filterGlobal($event)"
-            placeholder="Buscar"
-          />
+          <input pInputText type="text" (input)="filterGlobal($event)" placeholder="Buscar" />
         </div>
       </div>
     </ng-template>
-
     <ng-template pTemplate="header">
       <tr style="text-align: center">
         <th pSortableColumn="cedula" scope="col">
@@ -43,7 +31,6 @@
         <th scope="col">Acciones</th>
       </tr>
     </ng-template>
-
     <ng-template pTemplate="body" let-rowData>
       <tr>
         <td style="text-align: center">{{ rowData.cedula }}</td>
@@ -52,48 +39,17 @@
         <td style="text-align: center">{{ rowData.provincia }}</td>
         <td style="text-align: center">{{ rowData.tipoCurso }}</td>
         <td style="text-align: center">
-          <p-tag
-            *ngIf="rowData.estado === 'Aprobado'"
-            icon="pi pi-check"
-            severity="success"
-            value="Aceptado"
-          ></p-tag>
-          <p-tag
-            *ngIf="rowData.estado === 'Rechazado'"
-            icon="pi pi-times"
-            severity="danger"
-            value="Rechazado"
-          ></p-tag>
-          <p-tag
-            *ngIf="rowData.estado === 'Pendiente'"
-            icon="pi pi-spin pi-spinner"
-            severity="warning"
-            value="Pendiente"
-          ></p-tag>
+          <p-tag *ngIf="rowData.estado === 'Aprobado'" icon="pi pi-check" severity="success" value="Aceptado"></p-tag>
+          <p-tag *ngIf="rowData.estado === 'Rechazado'" icon="pi pi-times" severity="danger" value="Rechazado"></p-tag>
+          <p-tag *ngIf="rowData.estado === 'Pendiente'" icon="pi pi-spin pi-spinner" severity="warning"
+            value="Pendiente"></p-tag>
         </td>
         <td style="text-align: center">
-          <button
-            class="btn_success"
-            (click)="aceptar(rowData)"
-            [disabled]="rowData.estado !== 'Pendiente'"
-          >
-            <p-tag
-              icon="pi pi-check"
-              severity="success"
-              value="Aceptar"
-            ></p-tag>
+          <button class="btn_success" (click)="aceptar(rowData)" [disabled]="rowData.estado !== 'Pendiente'">
+            <p-tag icon="pi pi-check" severity="success" value="Aceptar"></p-tag>
           </button>
-
-          <button
-            class="btn_danger"
-            (click)="rechazar(rowData)"
-            [disabled]="rowData.estado !== 'Pendiente'"
-          >
-            <p-tag
-              icon="pi pi-times"
-              severity="danger"
-              value="Rechazar"
-            ></p-tag>
+          <button class="btn_danger" (click)="rechazar(rowData)" [disabled]="rowData.estado !== 'Pendiente'">
+            <p-tag icon="pi pi-times" severity="danger" value="Rechazar"></p-tag>
           </button>
         </td>
       </tr>
